     (Dorin Scutarașu)
   * Support for ignore whitespace differences in changes. 
     This mode can be turned on from command-line (`qdiff -w` 
     or `qdiff --ignore-whitespace`) and from GUI itself (in View Options).
     (Dorin Scutarașu, Glen Mailer, Bug #642000)
   * Added Find action to do text search within either pane.
     (Dorin Scutarașu, Bug #497832)
 * qinfo:
   * Significantly simpler implementation that shows the information
     provided by Bazaar.  This fills in the gaps in the data shown
     by qinfo (such as details of checkouts) and means that changes
     to 'bzr info' will automatically be reflected in qinfo.
     (A. S. Budden, Bug #439624)
 * qsubprocess:
   * Reliable exception encoding to pass exception attributes 
     from subprocess to the GUI process. (Martin [gz], Bug #686735)
 * qcat, qannotate, qdiff, qconfig:
   * Added ability to customise the tab-stop width (setting in qconfig,
     affects qcat, qannotate and qdiff).  
     The setting is stored in [DEFAULT] section of bazaar.conf,
     and is named tab_width (it can also be configured with qconfig).  Units
     are characters (so 4 means a tab should be displayed with the width of 4
     spaces).  The default value is 8.  The setting can also be adjusted in
     branch.conf for specific branches.  (Bug #490377, A. S. Budden)


0.20.1 - 2011/04/26
--------------------
Maintenance release.

 * Compatibility with patched bzrlib on debian without copy of configobj
   library inside it. (Bug #715067, Alexander Belchenko)
 * qbranch:
   * Fixed problem with very small width of input fields in the dialog
     on Mac OSX. (Timothy Reaves, Bug #667090)
 * qsubprocess:
   * Reliable exception encoding to pass exception attributes 
     from subprocess to the GUI process. (Martin [gz], Bug #686735)


0.20.0 - 2011/02/03
-------------------
Bazaar 2.3 companion release. Suitable for bzr 2.3 and bzr 2.2.

 * Refactor the config code: